# Jobanalyzer

./: .gitignore  DESIGN.md  Makefile  OLDER-USE-CASES.md  README.md  REQUIREMENTS.md  build.sh  install.sh  run_tests.sh  test.sh
code/attic/rustutils/: Cargo.toml
code/sonalyze/: .gitignore  AUTH.md  Cargo.toml  MANUAL.md  Makefile  NOTES.md  QUERY.md  README.md  REST.md  VERSION.txt  VOCAB.md  analysis.go  fnord  go.mod  go.sum  help.txt  remotable.go  run_tests.sh  sonalyze.go
code/sonalyze/add/: add.go
code/sonalyze/api/: api.go  cfg.yaml  slurm-monitor.json  slurm-monitor.yaml
code/sonalyze/application/: application_test.go  cluster_format_test.go  command.go  config_format_test.go  local.go  metadata_format_test.go  node_format_test.go  parse_format_test.go  remote.go  report_test.go
code/sonalyze/clusters/: clusters.go
code/sonalyze/cmd/: args.go  args_reify.go  cli.go  clustermeta.go  command.go  config.go  datastore.go
code/sonalyze/command/: args.go  args_test.go  command.go  config.go  format.go  reflect.go  reflect_test.go  reify.go
code/sonalyze/common/: config.go  date.go  date_test.go  debug.go  duration.go  duration_test.go  hosts.go  inifile.go  logger.go  protect.go  time.go  ustr.go  ustr_test.go  verbose.go
code/sonalyze/configs/: configs.go
code/sonalyze/daemon/: daemon.go  kafka.go  perform.go  slurm-monitor-api.go  slurm-monitor-config.yaml  summary.txt
code/sonalyze/db/: DATA-MODEL.md  README.md  cache.go  cluster.go  cluster_test.go  clusterstore.go  clusterstore_test.go  cluzter.go  cluzter_v0json_parser.go  cluzterfile.go  (+38 more)
(+1580 files in other folders)
