[package]
name = "sonalyze"
authors = ["Lars T Hansen"]
description = "Analyze `sonar` log files"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "sonalyze"
path = "src/sonalyze.rs"

[features]
default = [ "untagged_sonar_data" ]
untagged_sonar_data = [ "sonarlog/untagged_sonar_data" ]

[dependencies]
sonarlog = { path = "../sonarlog" }
chrono = "0.4"
clap = { version = "4.3.8", features = ["derive"] }
anyhow = "1.0.72"
csv = "1.2.2"
json = "0.12.4"
cfg-if = "1.0.0"
subprocess = "0.2.9"
urlencoding = "2.1.3"

[profile.release]
debug = 1
