[package]
name = "rustutils"
authors = ["Lars T Hansen"]
description = "Rust utilities"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
chrono = "0.4.26"
regex = "1.10.3"
serde_json = "1.0.114"
ustr = "1.0.0"
